# IncidentIQ

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup_and_validate.py  test_teams_bot.py
config/: nginx.conf
docs/: GTM_STRATEGY.md  README.md  TEAMS_SETUP.md  api_reference.md  architecture.md  configuration.md  deployment.md  development.md  testing.md
scripts/: init-db.sql
src/: __init__.py
src/api/: __init__.py  main.py
src/bots/: __init__.py  slack_bot.py  teams_bot.py  teams_server.py
src/core/: __init__.py  config.py  pattern_matching.py  pattern_matching_v2.py  retrieval.py  utils.py
src/db/: __init__.py  config_service.py  models.py
src/services/: __init__.py  cache_service.py  llm_service.py  local_embeddings.py
